update: openapi generator template and generate code
