# api/src/openapi_server/apis/get_api_base.py
@@ -1,11 +1,11 @@
 # coding: utf-8
 
-from typing import ClassVar, Dict, List, Tuple  # noqa: F401
+from typing import ClassVar, Dict, List, Tuple, Union  # noqa: F401
 
 from pydantic import Field
 from typing_extensions import Annotated
 from openapi_server.models.error_response400 import ErrorResponse400
-from openapi_server.models.get_video_id_and_wav_url_response200 import GetVideoIDAndWavURLResponse200
+from openapi_server.models.get_video_id_and_wav_url_response import GetVideoIDAndWavURLResponse
 from openapi_server.security_api import get_token_ApiKeyAuth
 
 class BaseGETApi:
@@ -14,9 +14,11 @@ class BaseGETApi:
     def __init_subclass__(cls, **kwargs):
         super().__init_subclass__(**kwargs)
         BaseGETApi.subclasses = BaseGETApi.subclasses + (cls,)
+
     async def user_id_get(
         self,
         user_id: Annotated[str, Field(strict=True, description="ユーザーID")],
-    ) -> GetVideoIDAndWavURLResponse200:
+    ) -> Union[GetVideoIDAndWavURLResponse, ErrorResponse400]:
         """ユーザーが作成したYouTubeIDとWavURLの一覧を取得します。"""
         ...
+
