# api/src/openapi_server/models/get_video_id_and_wav_url_response.py
@@ -20,27 +20,21 @@ import json
 
 
 
-from pydantic import BaseModel, ConfigDict, Field, field_validator
+from pydantic import BaseModel, ConfigDict, Field, StrictInt
 from typing import Any, ClassVar, Dict, List
-from typing_extensions import Annotated
+from openapi_server.models.video_id_and_wav_url import VideoIDAndWavURL
 try:
     from typing import Self
 except ImportError:
     from typing_extensions import Self
 
-class PostVideoResponse200(BaseModel):
+class GetVideoIDAndWavURLResponse(BaseModel):
     """
-    PostVideoResponse200
+    GetVideoIDAndWavURLResponse
     """ # noqa: E501
-    youtube_id: Annotated[str, Field(strict=True)] = Field(description="YouTubeの動画ID")
-    __properties: ClassVar[List[str]] = ["youtube_id"]
-
-    @field_validator('youtube_id')
-    def youtube_id_validate_regular_expression(cls, value):
-        """Validates the regular expression"""
-        if not re.match(r"^[a-zA-Z0-9_-]{11}$", value):
-            raise ValueError(r"must validate the regular expression /^[a-zA-Z0-9_-]{11}$/")
-        return value
+    status_code: StrictInt = Field(description="ステータスコード")
+    data: List[VideoIDAndWavURL]
+    __properties: ClassVar[List[str]] = ["status_code", "data"]
 
     model_config = {
         "populate_by_name": True,
@@ -60,7 +54,7 @@ class PostVideoResponse200(BaseModel):
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
-        """Create an instance of PostVideoResponse200 from a JSON string"""
+        """Create an instance of GetVideoIDAndWavURLResponse from a JSON string"""
         return cls.from_dict(json.loads(json_str))
 
     def to_dict(self) -> Dict[str, Any]:
@@ -79,11 +73,18 @@ class PostVideoResponse200(BaseModel):
             },
             exclude_none=True,
         )
+        # override the default output from pydantic by calling `to_dict()` of each item in data (list)
+        _items = []
+        if self.data:
+            for _item in self.data:
+                if _item:
+                    _items.append(_item.to_dict())
+            _dict['data'] = _items
         return _dict
 
     @classmethod
     def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of PostVideoResponse200 from a dict"""
+        """Create an instance of GetVideoIDAndWavURLResponse from a dict"""
         if obj is None:
             return None
 
@@ -91,7 +92,8 @@ class PostVideoResponse200(BaseModel):
             return cls.model_validate(obj)
 
         _obj = cls.model_validate({
-            "youtube_id": obj.get("youtube_id")
+            "status_code": obj.get("status_code"),
+            "data": [VideoIDAndWavURL.from_dict(_item) for _item in obj.get("data")] if obj.get("data") is not None else None
         })
         return _obj
 
